router/rules.v4
# Generated by iptables-save v1.8.4 on Mon Dec 13 23:39:14 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

#Logging
-I INPUT 1 -i enp0+ -j LOG --log-level info --log-prefix "IPTABLES INPUT "
-I OUTPUT 1 -o enp0+ -j LOG --log-level info --log-prefix "IPTABLES OUTPUT "
-I FORWARD 1 -j LOG --log-level info --log-prefix "IPTABLES FORWARD "


#ACCEPT any related or established connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Allow all traffic on the loopback interface
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

#Allow all forwarded traffic between DATA and WEB machines  
-A FORWARD -i enp0s8 -o enp0s9 -j ACCEPT
-A FORWARD -i enp0s9 -o enp0s8 -j ACCEPT

# Allow inbound DHCP request
-A INPUT -p udp --dport 67:68 --sport 67:68 -j ACCEPT

# Allow inbound SSH
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT

# Outbound DNS lookups
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT

# Inbound DNS requests
-A INPUT -p udp -m udp --dport 53 -j ACCEPT

# Outbound PING requests
-A OUTPUT -p icmp -j ACCEPT

# Inbound PING requests
-A INPUT -p icmp -j ACCEPT

# Outbound Network Time Protocol (NTP) requests
-A OUTPUT -p udp --dport 123 --sport 123 -j ACCEPT

# Outbound HTTP
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT


# Outbound elastic fleet connection
#-A OUTPUT -p tcp -m tcp --dport 8220 -j ACCEPT
# Inbound elastic fleet connection
-A INPUT -p tcp -m tcp --dport 8220 -j ACCEPT

# Inbound kibana
-A INPUT -p tcp -m tcp --dport 5601 -m state --state NEW -j ACCEPT

COMMIT
